# OpCodeReverseTool

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SECURITY.md  get_opcode.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deployment-scripts/radare2_deploy/: Dockerfile
docs/: README.zh-TW.md
docs/superpowers/plans/: 2026-03-29-unified-api-refactor.md
docs/superpowers/specs/: 2026-03-29-unified-api-refactor-design.md
opcode_tool/: __init__.py  __main__.py  cli.py  common.py
opcode_tool/backends/: __init__.py  base.py  ghidra.py  radare2.py
opcode_tool/scripts/: ghidra_opcode_script.py
scripts/: ghidra_opcode_script.py
